# Build kernel using rules_rust and rules_nasm
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("@rules_nasm//nasm:defs.bzl", "nasm_library")
load("//toolchain:retro_platform.bzl", "retro_platform_files")

# Bare-metal (os:none) vs host build selector. The one kernel library and the
# metal ELF binary use this to pick platform-specific deps / linker flags.
config_setting(
    name = "metal",
    constraint_values = ["@platforms//os:none"],
)

nasm_library(
    name = "entry",
    srcs = ["src/arch/entry.asm"],
    copts = ["-f", "elf32"],
)

# The linker script, materialized into bazel-out so the rust_binary link action
# stages it reliably (a source file passed via compile_data wasn't found by the
# linker; bazel-out inputs are).
genrule(
    name = "kernel_ld",
    srcs = ["kernel.ld"],
    outs = ["kernel.generated.ld"],
    cmd = "cp $< $@",
)

# THE kernel: ONE backend-agnostic rust_library (rlib), linked by every entry
# binary below. The source gates its metal-only glue (boot.rs, fbcon, the
# `arch_metal` backend) with `#[cfg(target_arch = "x86")]`, so the same crate
# builds for the bare-metal target (arch-metal) and the host target
# (arch-interp, linked in by the hosted binaries). `select()` supplies the
# platform-specific dep flavours and the metal-only codegen flags.
rust_library(
    name = "kernel",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "kernel",
    edition = "2024",
    visibility = ["//visibility:public"],
    rustc_flags = [
        "-Cpanic=abort",
        # //lib + //arch-abi are -Crelocation-model=static (non-PIC); a PIE link
        # rejects them — build non-PIE to match, on both platforms.
        "-Crelocation-model=static",
    ] + select({
        ":metal": [
            "-Copt-level=s",
            "-Cforce-frame-pointers=yes",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//arch-abi",
        "//lib",
        # no_std-patched http_archive (not @crates): one flavour serves both
        # platforms — the synth core is pure integer math with zero deps.
        "@nuked_opl3//:nuked_opl3",
    ] + select({
        ":metal": [
            "//arch-metal",
            "@ext4_view//:ext4_view",
            "@spin//:spin",
        ],
        "//conditions:default": [
            "@crates//:ext4-view",
            "@crates//:rustc-demangle",
            "@crates//:spin",
        ],
    }),
)

# ============================================================================
# Metal entry: the bootable kernel.elf, produced by rustc-linking the kernel
# rlib (+ arch-metal, pulled transitively) with the asm entry stub and the
# embedded bootfs object, under the kernel linker script. Replaces the old
# `ld` genrule — the rlib is not self-contained, so rustc does the link.
# ============================================================================

# The asm `_start` stub and the embedded bootfs object are linked straight in
# as native objects via `-Clink-arg` (the bare-metal CC toolchain has only a
# dummy `ar`, so they can't go through `cc_library`). `_start` (kept by the
# script's ENTRY) calls the kernel's `boot_kernel`; the bootfs symbols are read
# by `kernel::bootfs()`. rust-lld pulls `boot_kernel` and the rest out of the
# kernel rlib to satisfy the objects' undefined references.
rust_binary(
    name = "kernel_elf_bin",
    srcs = ["metal_entry.rs"],
    crate_name = "kernel_metal",
    edition = "2024",
    compile_data = [":kernel_ld", ":entry", ":bootfs_obj"],
    rustc_flags = [
        "-Cpanic=abort",
        "-Crelocation-model=static",
        # Link with rustc's bundled lld (the bare CC toolchain is dummy-only),
        # directly as ld.lld — the i686-unknown-none target's linker.
        "-Clink-self-contained=+linker",
        "-Clinker-flavor=ld.lld",
        "-Clinker=rust-lld",
        "-Clink-arg=-T$(location :kernel_ld)",
        "-Clink-arg=$(location :entry)",
        "-Clink-arg=$(location :bootfs_obj)",
        "-Clink-arg=-nostdlib",
        "-Clink-arg=-no-pie",
    ],
    deps = [
        ":kernel",
        "//arch-metal",
    ],
)

rust_binary(
    name = "kernel_elf_bare_bin",
    srcs = ["metal_entry.rs"],
    crate_name = "kernel_metal",
    edition = "2024",
    compile_data = [":kernel_ld", ":entry", ":bootfs_empty_obj"],
    rustc_flags = [
        "-Cpanic=abort",
        "-Crelocation-model=static",
        # Link with rustc's bundled lld (the bare CC toolchain is dummy-only),
        # directly as ld.lld — the i686-unknown-none target's linker.
        "-Clink-self-contained=+linker",
        "-Clinker-flavor=ld.lld",
        "-Clinker=rust-lld",
        "-Clink-arg=-T$(location :kernel_ld)",
        "-Clink-arg=$(location :entry)",
        "-Clink-arg=$(location :bootfs_empty_obj)",
        "-Clink-arg=-nostdlib",
        "-Clink-arg=-no-pie",
    ],
    deps = [
        ":kernel",
        "//arch-metal",
    ],
)

# Keep the `//kernel:kernel_elf` label and the `kernel.elf` filename stable
# (run.sh reads bazel-bin/kernel/kernel.elf; //:image + the md5 genrule consume
# the label).
genrule(
    name = "kernel_elf",
    srcs = [":kernel_elf_bin"],
    outs = ["kernel.elf"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

genrule(
    name = "kernel_elf_bare",
    srcs = [":kernel_elf_bare_bin"],
    outs = ["kernel_bare.elf"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

# ============================================================================
# Hosted entry binaries: link the SAME kernel rlib against arch-interp.
# ============================================================================

rust_binary(
    name = "retroos-host",
    srcs = ["src/main.rs"],
    crate_name = "retroos_host",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Crelocation-model=static",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bootfs_host",
        ":kernel",
        "//arch-interp",
        "//lib",
    ],
)

rust_binary(
    name = "retroos-host-kvm",
    srcs = ["src/main.rs"],
    crate_name = "retroos_host",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Crelocation-model=static",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bootfs_host",
        ":kernel",
        "//arch-interp:arch-interp-kvm",
        "//lib",
    ],
)

# The bootfs tar pinned to the canonical retro platform: its build subtree
# (in-OS TCC → image_min → the i686 bootloader) must not follow the host
# config that retroos-host builds in.
retro_platform_files(
    name = "bootfs_tar_pinned",
    dep = "//:bootfs_tar",
)

# The embedded bootfs for the HOSTED binary: same bytes, same
# _binary_bootfs_tar_* symbols as the metal kernel's bootfs_obj, in the
# host object format. /boot always exists, on top of whatever the root is.
genrule(
    name = "bootfs_obj_host",
    srcs = [":bootfs_tar_pinned"],
    outs = ["bootfs_host.o"],
    cmd = "T=$$(mktemp -d) && cp $< $$T/bootfs.tar && O=$$(pwd)/$@ && " +
          "(cd $$T && objcopy -I binary -O elf64-x86-64 -B i386:x86-64 " +
          "--rename-section .data=.rodata,alloc,load,readonly,data,contents " +
          "bootfs.tar $$O) && rm -r $$T",
)

cc_library(
    name = "bootfs_host",
    srcs = [":bootfs_obj_host"],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

# Empty twin for retroos-host-bare (the in-OS TCC build tool): bootfs_tar
# contains COMMAND.COM, which is BUILT BY retroos-host — the tool must not
# depend on its own output. Mirrors kernel_elf_bare's bootfs_empty_obj:
# a 1024-byte zero TAR reads as end-of-archive → bootfs() returns None.
genrule(
    name = "bootfs_empty_obj_host",
    outs = ["bootfs_empty_host.o"],
    cmd = "T=$$(mktemp -d) && truncate -s 1024 $$T/bootfs.tar && O=$$(pwd)/$@ && " +
          "(cd $$T && objcopy -I binary -O elf64-x86-64 -B i386:x86-64 " +
          "--rename-section .data=.rodata,alloc,load,readonly,data,contents " +
          "bootfs.tar $$O) && rm -r $$T",
)

cc_library(
    name = "bootfs_host_empty",
    srcs = [":bootfs_empty_obj_host"],
    linkstatic = True,
)

# The TCC-genrule tool: identical to retroos-host but with the empty
# bootfs (see bootfs_empty_obj_host) — breaks the COMMAND.COM cycle. Tool
# runs always boot a disk image, so /boot comes from its TAR partition.
rust_binary(
    name = "retroos-host-bare",
    srcs = ["src/main.rs"],
    crate_name = "retroos_host",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Crelocation-model=static",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":bootfs_host_empty",
        ":kernel",
        "//arch-interp",
        "//lib",
    ],
)

# The embedded boot filesystem (DN + COMMAND.COM, see //:bootfs_tar) as a
# linkable object: raw bytes in .rodata between _binary_bootfs_tar_{start,end}
# (read by `kernel::bootfs()`). objcopy derives the symbol names from the
# input path, hence the cd-to-a-fixed-name dance.
genrule(
    name = "bootfs_obj",
    srcs = ["//:bootfs_tar"],
    outs = ["bootfs.o"],
    cmd = "T=$$(mktemp -d) && cp $< $$T/bootfs.tar && O=$$(pwd)/$@ && " +
          "(cd $$T && objcopy -I binary -O elf32-i386 -B i386 " +
          "--rename-section .data=.rodata,alloc,load,readonly,data,contents " +
          "bootfs.tar $$O) && rm -r $$T",
)

# Empty variant: same symbols around an empty TAR (two zero end-of-archive
# blocks — objcopy refuses a 0-byte input; bootfs() reads a zero first block
# as "no bootfs"). Links into kernel_elf_bare above.
genrule(
    name = "bootfs_empty_obj",
    outs = ["bootfs_empty.o"],
    cmd = "T=$$(mktemp -d) && truncate -s 1024 $$T/bootfs.tar && O=$$(pwd)/$@ && " +
          "(cd $$T && objcopy -I binary -O elf32-i386 -B i386 " +
          "--rename-section .data=.rodata,alloc,load,readonly,data,contents " +
          "bootfs.tar $$O) && rm -r $$T",
)
