[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

# HOSTED build only. The bare-metal build stays on Bazel (//kernel:kernel_elf);
# this manifest exists so the kernel can be compiled as a std binary linking the
# software `arch-interp` backend, on the native (64-bit) host:
#   cargo run -p kernel

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "retroos-host"
path = "src/main.rs"
required-features = ["hosted"]

[features]
# `hosted` is the only cargo configuration that builds — it selects the hosted
# arch backend and routes console output to stdout. Default so the documented
# `cargo build -p kernel` works without extra flags. The backend's execution
# engine is a separate compile-time choice forwarded to arch-interp: `tcg`
# (default, Unicorn) or `kvm` (/dev/kvm) — the KVM binary is built with
#   cargo build -p kernel --no-default-features --features hosted,kvm
default = ["hosted", "tcg"]
hosted = ["dep:retroos-arch-interp"]
tcg = ["retroos-arch-interp?/tcg"]
kvm = ["retroos-arch-interp?/kvm"]
# (The live A/V window is NOT a feature of this binary: `retroos-play` is its
# own workspace member owning the SDL dependency; this binary stays headless.)

[dependencies]
arch-abi = { path = "../arch-abi" }
lib = { path = "../lib" }
retroos-arch-interp = { path = "../arch-interp", optional = true, default-features = false }
ext4-view = "0.9.3"
rustc-demangle = "0.1.24"
# no_std spinlock for shared kernel singletons (the kpipe pool, …). Minimal
# features keep it dependency-free (no `lock_api`).
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "mutex"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bootfs_embedded)"] }
