# Build lib crate using rules_rust
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "lib",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "lib",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Copt-level=z",
        "-Crelocation-model=static",
    ],
)

# The unified wavetable sampler — integer-only voice mixing under every
# sample-playback personality (GUS now; GM/SF2, AWE32, MT-32 later).
# Its own target, not part of :lib: the per-frame mix loop runs at up to
# 44.1 kHz × 32 voices, so opt-level 2, not z (the nuked_opl3 reasoning).
rust_library(
    name = "sampler",
    srcs = glob(["sampler/src/**/*.rs"]),
    crate_name = "sampler",
    crate_root = "sampler/src/lib.rs",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Copt-level=2",
        "-Crelocation-model=static",
    ],
)

# Host unit tests (bazelisk test //lib:sampler_test --platforms=@platforms//host).
# The crate is cfg_attr(not(test), no_std), so the test build links std and
# the harness; abort matches the rlib (arch-interp test pattern).
rust_test(
    name = "sampler_test",
    crate = ":sampler",
    rustc_flags = [
        "-Cpanic=abort",
        "-Zpanic_abort_tests",
        "-Crelocation-model=static",
    ],
)
