# retroos-play — the windowed (SDL) hosted A/V tool. Built under Bazel like
# everything else so it links the ONE patched unicorn (//third_party/unicorn,
# no-double-fault; the historical cargo build pulled the fork's unpatched
# unicorn rev, whose #DF synthesis surfaced as 0xFFFFFFFE SEGVs once VM86 ran
# at IOPL=1 — one build system, one C core).
#
# SDL2 comes from @crates//:sdl2 (the sdl2 crate's `bundled`+`static-link`
# features compile a static SDL2 in its build script — no system libSDL2 at
# build or run time). Build for the host: --platforms=@platforms//host.
#
# Bootfs is EMBEDDED (//kernel:bootfs_host), exactly like retroos-host — so
# the windowed launch is one host-platform build with no separate
# //:bootfs_tar step (which would flip --platforms and discard Bazel's
# analysis cache every run).
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "retroos-play",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "retroos_play",
    edition = "2021",
    rustc_flags = [
        "-Cpanic=abort",
        # //lib + //arch-abi are -Crelocation-model=static (non-PIC); match it.
        "-Crelocation-model=static",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//arch-interp",
        "//kernel:bootfs_host",
        "//kernel:kernel",
        "//lib",
        "@crates//:sdl2",
    ],
)

# The windowed tool on the KVM engine (`./run.sh hosted --kvm`, no --terminal):
# same sources, the *-kvm library pair underneath — and no Unicorn C core (the
# patched-fork landmine above doesn't apply to this binary at all).
rust_binary(
    name = "retroos-play-kvm",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "retroos_play",
    edition = "2021",
    rustc_flags = [
        "-Cpanic=abort",
        "-Crelocation-model=static",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//arch-interp:arch-interp-kvm",
        "//kernel:bootfs_host",
        "//kernel:kernel",
        "//lib",
        "@crates//:sdl2",
    ],
)
