# retroos-play — the "actually playing" hosted target: boots a RetroOS disk
# image on the interpreter backend with a live SDL window (video, keyboard,
# mouse). The SDL dependency lives HERE and only here; `retroos-host` (the
# kernel crate's binary) stays headless for tests, genrules, and repro runs.
#
#   cargo run -p retroos-play -- bazel-bin/image_proprietary.bin \
#       --cmd "GAMES/SKYROADS/SKYROADS.EXE" --cwd "GAMES/SKYROADS/"
[package]
name = "retroos-play"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "retroos-play"
path = "src/main.rs"

[features]
# Engine selection, forwarded down the pair (see arch-interp): the Bazel
# targets retroos-play / retroos-play-kvm are the primary build path; cargo
# kvm builds use `--no-default-features --features kvm`.
default = ["tcg"]
tcg = ["retroos-arch-interp/tcg", "kernel/tcg"]
kvm = ["retroos-arch-interp/kvm", "kernel/kvm"]

[dependencies]
kernel = { path = "../kernel", default-features = false, features = ["hosted"] }
lib = { path = "../lib" } # default features = hosted (interp backend)
retroos-arch-interp = { path = "../arch-interp", default-features = false }
# `bundled` compiles SDL2 from source (like Unicorn's C core); `static-link`
# avoids needing a system libSDL2 at runtime.
sdl2 = { version = "0.37", default-features = false, features = ["bundled", "static-link"] }
