exports_files(
    [
        "DN.COM",
        "DN.PRG",
        "DN.OVR",
        "DN.DLG",
        "DN.LNG",
        "DN.HLP",
        "DN.EDT",
        "DN.EXT",
        "DN.HGL",
        "DN.MNU",
        "DN.VWR",
        "DN.XRN",
        "DN.FLG",
        "DN.HIS",
    ],
    visibility = ["//visibility:public"],
)
