# dosrt — Rust-on-DOS via a shared ELF loader. See README.md for the
# architecture and the stub→RLOADER→payload handoff contract.
#
# Status: SCAFFOLD. Rules mirror in-tree patterns (kernel: rust_static_library
# → `ld -T` genrule; hello_com: `nasm -f bin`; boot: `objcopy -O binary`).
# The freestanding-binary path is new ground here — expect to iterate the
# retro transition / link until it produces a valid ELF.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_static_library")
load(":retro.bzl", "retro_lib")

# ---- dosrt: the universal Rust-on-DOS runtime (crt0 + DPMI + libc) -----
# Every dosrt program links this; the program supplies only
# `#[no_mangle] extern "C" fn dosrt_main()`. An rlib (inter-crate Rust
# dep); rloader's staticlib bundles it for the `ld -T` step.

rust_library(
    name = "dosrt_lib",
    srcs = ["src/lib.rs"],
    crate_name = "dosrt",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Copt-level=z",
        "-Crelocation-model=static",
    ],
    deps = ["//lib"],
    visibility = ["//visibility:public"],
)

# ---- RLOADER: pure-PM flat loader (single, shared) ----------------------

rust_static_library(
    name = "rloader_lib",
    srcs = ["rloader/src/main.rs"],
    crate_name = "rloader",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Copt-level=z",
        "-Crelocation-model=static",
    ],
    # dosrt = the runtime (crt0/_start, console, DPMI, libc); //lib for
    # lib::elf. staticlib bundles both rlibs into one archive for the
    # `ld -T` step; --gc-sections there strips the unused bulk so
    # RLOADER.BIN stays small enough for the small-model stub loader.
    deps = [":dosrt_lib", "//lib"],
)

retro_lib(
    name = "rloader_retro",
    lib = ":rloader_lib",
)

genrule(
    name = "rloader_elf",
    srcs = [":rloader_retro", "rloader/rloader.ld"],
    outs = ["rloader.elf"],
    # `-u rloader_entry`: force-link RLOADER's own crt entry (its name is
    # NOT _start — dosrt owns _start as the app crt0). gc-sections then
    # drops dosrt's unused _start (and its app_main ref) from RLOADER.
    cmd = "ld -m elf_i386 --gc-sections -T $(location rloader/rloader.ld) -u rloader_entry --entry rloader_entry $(location :rloader_retro) -o $@",
)

genrule(
    name = "rloader_bin",
    srcs = [":rloader_elf"],
    outs = ["RLOADER.BIN"],
    cmd = "objcopy -O binary $< $@",
    visibility = ["//visibility:public"],
)

# ---- payload: ordinary no_std ELF (hello smoke test) --------------------

rust_static_library(
    name = "hello_lib",
    srcs = ["hello/src/main.rs"],
    crate_name = "hello",
    edition = "2024",
    rustc_flags = [
        "-Cpanic=abort",
        "-Copt-level=z",
        # PIE — RLOADER applies R_386_RELATIVE fixups at load.
        "-Crelocation-model=pie",
    ],
)

retro_lib(
    name = "hello_retro",
    lib = ":hello_lib",
)

genrule(
    name = "hello_elf",
    srcs = [":hello_retro", "hello/hello.ld"],
    outs = ["hello.elf"],
    # -pie: position-independent ET_DYN; --no-dynamic-linker drops
    # PT_INTERP (RLOADER is the loader). `-u _start` forces the archive
    # member carrying `_start` to be linked.
    cmd = "ld -m elf_i386 -pie --no-dynamic-linker --hash-style=sysv " +
          "-T $(location hello/hello.ld) -u _start $(location :hello_retro) -o $@",
)

# ---- stub: Turbo C MZ EXE, compiled by booting RetroOS in QEMU --------
# QEMU is invoked as a build tool (host tool, like ld/nasm used above);
# there's no Linux-hosted Turbo C, so TC runs inside RetroOS. qemu_tcc.sh
# is the genrule action, not a hand-run script.

genrule(
    name = "stub_exe",
    srcs = [
        "stub/stub.c",
        # Minimal dosrt-free boot image: booting //:image (which now
        # bundles modplay_exe) here would be a build cycle.
        "//:image_min",
        "//:hostfs.py",
    ],
    outs = ["STUB.EXE"],
    tools = ["qemu_tcc.sh"],
    cmd = "$(location qemu_tcc.sh) $(location //:image_min) $(location //:hostfs.py) $(location stub/stub.c) $@",
    # Packed onto by dosrt payloads (hello, //apps/tests/modplay, …).
    visibility = ["//visibility:public"],
)

# ---- pack: app.exe = stub ++ payload.elf --------------------------------
# Convention: RLOADER reads the payload ELF from offset = size of the MZ
# load module (= len(STUB.EXE)). The stub passes that offset to RLOADER
# (ECX) per the handoff contract.

genrule(
    name = "dosrt_exe",
    srcs = [":stub_exe", ":hello_elf"],
    outs = ["DOSRT.EXE"],
    cmd = "cat $(location :stub_exe) $(location :hello_elf) > $@",
    visibility = ["//visibility:public"],
)

# modplay (the .MOD player / SB DMA test) lives under //apps/tests/modplay.
# It links dosrt_lib + is packed onto stub_exe (both visible above).
